--- a/Rostering.Web/Rostering.Web.csproj
+++ b/Rostering.Web/Rostering.Web.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="VYaml" Version="1.0.0" />  
-      <ProjectReference Include="..\Rostering.Domain\Rostering.Domain.csproj" />
+        <ProjectReference Include="..\Rostering.Application\Rostering.Application.csproj" />  
     </ItemGroup>
 
 </Project>
